# mysql_slowlogd

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
doc/: playback_architecture.graffle
src/: Makefile.am  Makefile.in  mysql_slowlogd.c
